# huggingface-ragflow

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit.py
core/: config.py
core/chain_creator/: __init__.py  conversational_chain.py  prompt.txt
core/data_loader/: vector_store.py
core/model/: __init__.py  embedding.py  llm.py
core/retrieval/: __init__.py  retriever.py
embeddings/: config.py  load_embeddings.py
llm/: config.py
llm/embeddings/: load_embeddings.py
utils/: logging.py
